[package]
name = "xenon-tunnel"
version = "1.0.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
futures = "0.3.13"
lz4_flex = { version = "0.7.5", default-features = false, features = ["std", "checked-decode"] }
nano-leb128 = "0.1.0"
rand = "0.8.3"
snow = "0.7.2"
tokio = { version = "1.3.0", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["codec", "io"] }
obfstr = "0.2.4"
once_cell = "1.7.2"

[features]
beta = []
ring = ["snow/ring-accelerated"]
